@@ -11,19 +11,23 @@ $file = $config{'user_template'};
 $file = "$module_config_directory/user-template"
 	if ($file eq "none" || $file eq 'default');
 
-print &text($config{'user_template'} eq "none" ?
-	    'newuser_descdis' : 'newuser_desc', "<tt>$file</tt>"),"<p>\n";
 $text{'sub_USER'} = $text{'sub_POP3'};
 $text{'sub_HOME'} = $text{'sub_POP3HOME'};
+print &ui_hidden_start($text{'newuser_docs'}, "docs", 0);
+print $text{'newuser_desc2'},"<p>\n";
 &print_subs_table("MAILBOX", "USER", "PLAINPASS", "DOM", "FTP", "HOME",
 		  "QUOTA");
+print &ui_hidden_end(),"<p>\n";
+
 print &email_template_input($file,
 	    $config{'newuser_subject'} || $text{'mail_usubject'},
 	    $config{'newuser_cc'},
 	    $config{'newuser_bcc'},
 	    $config{'newuser_to_mailbox'},
 	    $config{'newuser_to_owner'},
-	    $config{'newuser_to_reseller'});
+	    $config{'newuser_to_reseller'},
+	    $text{'newuser_header'},
+	    $config{'user_template'});
 print &ui_form_end([ [ "save", $text{'save'} ] ]);
 
 &ui_print_footer("", $text{'index_return'});
